<resources>
    <string name="app_name">SiBisa</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
    <string name="auth_splash_image">Auth Splash Image</string>
    <string name="user_image">User Image</string>
    <string name="user_home_greeting">Hi,</string>
    <string name="user_name">Nama Pengguna</string>
    <string name="tv_home_jargon">Yuk! Belajar Bahasa Isyarat.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="translate_sign_language">Translate Sign Language</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_template">email@email.com</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="change_your_name">Change Your Name</string>
    <string name="change_your_email">Change Your Email</string>
    <string name="edit_dialog_placeholder">Silahkan isi kolom ini</string>
    <string name="title_prompt">Title Prompt</string>
    <string name="huruf_abjad">Huruf Abjad</string>
    <string name="sign_category">Sign Category</string>
    <string name="kata_isyarat">Kata Isyarat</string>
    <string name="sign_title">Sign Title</string>
    <string name="sibisa">SiBisa</string>
    <string name="sibisa_akronim">Sistem Interaktif Bahasa Isyarat</string>
    <string name="creator">Pembuat</string>
</resources>