<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_500"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="112dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/user_profil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/user_name"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/email_template"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>